fix: remove image if it does not fit constraints

--- a/TravelPlanner/src/Components/Descriptions/Descriptions.css
+++ b/TravelPlanner/src/Components/Descriptions/Descriptions.css
@@ -27,6 +27,7 @@
       overflow: hidden;
       height: 400px;
       border-radius: 10px;
+      filter: invert(0);
     }
   }
 
