--- a/TravelPlanner/src/Components/NewDestination/NewDestination.css
+++ b/TravelPlanner/src/Components/NewDestination/NewDestination.css
@@ -51,11 +51,13 @@
       width: 100%;
       border-radius: 5px;
       border: 1px solid var(--primary);
+      
 
       #inputImage{
         cursor: pointer;
         border: none;
-
+        width: 100%;
+        padding: 10px;
       }
       .imgPreview{
         max-height: 300px;
